--- a/manifest.json
+++ b/manifest.json
@@ -2,14 +2,17 @@
     "background_color": "#4758F0",
     "theme_color": "#F5F5F5",
     "dir": "ltr",
+    "lang":"pt-BR",
+    "prefer_related_applications": false,
     "Content-Type": "text/html; charset=UTF-8",
     "display": "standalone",
+    "display_override": "standalone",
     "name": "DropletMap",
+    "description": "PWA para monitorar pontos de alagamento na cidade de Recife.",
     "orientation": "portrait",
     "scope": "/",
     "short_name": "DropletMap",
     "start_url": "/index.html",
-    "categories": ["Mapas", "Transporte","Informação"],
     "screenshots":[
       ],
     "icons": [
@@ -66,6 +69,7 @@
         "type": "image/png"
       }
     ],
+    "categories": ["Mapas", "Transporte","Informação","Natureza"],
     "shortcuts": [
         {
           "name": "Login",
