Erro no 'display_override' corrigido'

--- a/manifest.json
+++ b/manifest.json
@@ -5,8 +5,8 @@
     "lang":"pt-BR",
     "prefer_related_applications": false,
     "Content-Type": "text/html; charset=UTF-8",
+    "display_override": ["fullscreen", "minimal-ui"],
     "display": "standalone",
-    "display_override": "standalone",
     "name": "DropletMap",
     "description": "PWA para monitorar pontos de alagamento na cidade de Recife.",
     "orientation": "portrait",
